.provarCaches/00D5h000009Q6XQEA0/objects/QCLiveChecks__QcUser__c.object
<CustomObject>
    <fields>
        <fullName>QCLiveChecks__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ApiKey1__c</fullName>
        <label>ApiKey1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ApiKey2__c</fullName>
        <label>ApiKey2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ApiKey3__c</fullName>
        <label>ApiKey3</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ApiKeyId__c</fullName>
        <label>ApiKeyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__CustomerId__c</fullName>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Developer__c</fullName>
        <label>Developer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__InstanceId__c</fullName>
        <label>InstanceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__QcUserId__c</fullName>
        <externalId>true</externalId>
        <label>QcUserId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QcUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QcUser</label>
    <nameField>
        <label>QcUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QcUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>